--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -1,40 +1,125 @@
-/*
- * Copyright 2014 Next Century Corporation
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- */
-
-.query-results-directive {
-    margin: 0px;
-    height: 100%;
-    width: 100%;
-}
-
-.visualization-widget .query-results-directive {
-    padding: 20px;
-}
+//
+// Copyright 2014 Next Century Corporation
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+//
+//
 
 .count-header {
     margin: 5px 0px;
 }
 
-/* Needed to align with .tray .container > .pull-right rule from style.css. */
-.tray .container .count-header {
-    margin-top: 10px;
+.data-tray {
+    h4 {
+        &.pull-left {
+            @media (max-width: 767px) {
+                float: none !important;
+            }
+
+            @media (min-width: 768px) and (max-width: 991px) {
+                float: none !important;
+            }
+        }
+    }
+
+    .form-inline {
+        @media (max-width: 767px) {
+            float: none !important;
+            margin-top: 15px !important;
+            margin-bottom: 10px;
+        }
+
+        @media (min-width: 768px) and (max-width: 991px) {
+            float: none !important;
+            margin-bottom: 5px;
+        }
+
+        .form-control {
+            @media (max-width: 767px) {
+                display: inline-block;
+                width: 100%;
+                vertical-align: middle;
+            }
+        }
+
+        .form-group {
+            @media (max-width: 767px) {
+                display: inline-block;
+                margin-bottom: 0;
+                vertical-align: middle;
+                width: 20%;
+            }
+
+            > label {
+                @media (max-width: 767px) {
+                    display: block;
+                    margin-top: 0;
+                    margin-left: 0;
+                }
+            }
+        }
+
+        .form-input-group {
+            @media (max-width: 767px) {
+                width: 55%;
+                padding-right: 10px;
+            }
+
+            > label{
+                @media (max-width: 767px) {
+                    float: none !important;
+                    display: block;
+                    margin-top: 0;
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+
+    .input-group {
+        .form-control {
+            @media (max-width: 767px) {
+                width: 100%;
+            }
+        }
+    }
+
+    .refresh {
+        margin-left: 10px;
+
+        @media (max-width: 767px) {
+            margin-top: 21px;
+        }
+    }
 }
 
-.data-tray .refresh{
-    margin-left: 10px;
+.query-results-directive {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+
+    .chart-options {
+        // Align with the Sort By and Limit items.
+        margin-top: 3px;
+        margin-left: 10px;
+    }
+
+    .query-results-options {
+        // Set a lower position for the popover due to the extra top margin added to chart-options.
+        top: 48px;
+    }
+}
+.query-results-directive {
+
 }
 
 .query-results-grid {
@@ -44,14 +129,41 @@
     border: 1px solid #CCCCCC;
     border-radius: 2px;
     box-shadow: 0 1px 4px rgba(154, 154, 154, 0.2);
-}
 
-/* Set specific rules for the collapsable version of the grid. */
-.tray .container .query-results-grid {
-    min-height: 200px;
-    height: 300px;
-}
+    .slick-row{
+        background: #FAFAFA;
 
+        &.odd {
+            background: #F1F1F1;
+        }
+    }
+
+    .slick-header{
+        border-top: 0;
+
+        .slick-header-column{
+            color: #555555;
+            background: #e1e1e1;
+
+            &.ui-state-hover{
+                color: #39B54A;
+                background: #FFFFFF;
+            }
+        }
+
+        .slick-header-column-sorted{
+            color: #39B54A;
+            font-style: normal;
+        }
+
+        .slick-sortable-placeholder{
+            background: #cccccc;
+        }
+    }
+}
+.query-results-grid {
+
+}
 .query-results-grid, .query-results-grid:before, .query-results-grid:after, .query-results-grid *, .query-results-grid *:before, .query-results-grid *:after {
     box-sizing: content-box;
     -webkit-box-sizing: content-box;
@@ -62,86 +174,21 @@
     float: none;
 }
 
-.query-results-grid .slick-row{
-    background: #FAFAFA;
-}
-.query-results-grid .slick-row.odd{
-    background: #F1F1F1;
-}
-.query-results-grid .slick-header{
-    border-top: 0;
-}
-.query-results-grid .slick-header .slick-header-column{
-    color: #555555;
-    background: #e1e1e1;
-}
-.query-results-grid .slick-header .slick-header-column.ui-state-hover{
-    color: #39B54A;
-    background: #FFFFFF;
-}
-.query-results-grid .slick-header .slick-header-column-sorted{
-    color: #39B54A;
-    font-style: normal;
-}
-.query-results-grid .slick-header .slick-sortable-placeholder{
-    background: #cccccc;
+.tray {
+    .container {
+        .count-header {
+            margin-top: 10px;
+        }
+
+        .query-results-grid {
+            min-height: 200px;
+            height: 300px;
+        }
+    }
 }
 
-.query-results-directive .chart-options {
-    /* Align with the Sort By and Limit items. */
-    margin-top: 3px;
-    margin-left: 10px;
-}
-
-.query-results-directive .query-results-options {
-    /* Set a lower position for the popover due to the extra top margin added to chart-options. */
-    top: 48px;
-}
-
-@media (max-width: 767px) {
-    .data-tray h4.pull-left,
-    .data-tray .form-inline,
-    .data-tray .form-inline .form-input-group > label{
-        float: none !important;
-    }
-    .data-tray .form-inline{
-        margin-top: 15px !important;
-        margin-bottom: 10px;
-    }
-    .data-tray .form-inline .form-group {
-        display: inline-block;
-        margin-bottom: 0;
-        vertical-align: middle;
-        width: 20%;
-    }
-    .data-tray .form-inline .form-group > label,
-    .data-tray .form-inline .form-input-group > label{
-        display: block;
-        margin-top: 0;
-        margin-left: 0;
-    }
-    .data-tray .form-inline .form-input-group{
-        width: 55%;
-        padding-right: 10px;
-    }
-    .data-tray .form-inline .form-control {
-        display: inline-block;
-        width: 100%;
-        vertical-align: middle;
-    }
-    .data-tray .input-group .form-control {
-        width: 100%;
-    }
-    .data-tray .refresh {
-        margin-top: 21px;
-    }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-    .data-tray h4.pull-left,
-    .data-tray .form-inline{
-        float: none !important;
-    }
-    .data-tray .form-inline{
-        margin-bottom: 5px;
+.visualization-widget {
+    .query-results-directive {
+        padding: 20px;
     }
 }
