--- a/app/css/directives/tagCloud.less
+++ b/app/css/directives/tagCloud.less
@@ -1,36 +1,36 @@
-/*
- * Copyright 2014 Next Century Corporation
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- */
+//
+// Copyright 2014 Next Century Corporation
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+//
+//
 
 .tagcloud {
     text-align: center;
     margin: 0 -8px;
-}
-.tagcloud .tag {
-    display: inline-block;
-    padding: 4px 8px;
-    cursor: pointer;
-}
-.tagcloud .tag:hover {
-    color: #333333 !important;
-    text-decoration: none;
-}
 
-@media (min-width: 1860px) {
-    .tagcloud {
+    @media (min-width: 1860px) {
         font-size: 12px;
+    }
+
+    .tag {
+        display: inline-block;
+        padding: 4px 8px;
+        cursor: pointer;
+
+        &:hover {
+            color: #333333 !important;
+            text-decoration: none;
+        }
     }
 }
 
@@ -40,9 +40,11 @@
     overflow-x: hidden;
     overflow-y: auto;
     padding: 20px;
+
+    .chart-options {
+        // Add a bottom margin to make the chart-options element the same size as the filter-reset elements.
+        margin-bottom: 6px;
+    }
 }
 
-.tagcloud-container .chart-options {
-    /* Add a bottom margin to make the chart-options element the same size as the filter-reset elements. */
-    margin-bottom: 6px;
-}
+
