--- a/app/css/style.less
+++ b/app/css/style.less
@@ -115,11 +115,9 @@ label{
 }
 
 .btn-lg {
-    > .btn {
-        padding: 10px 20px;
-        font-size: 18px;
-        line-height: 1.33;
-    }
+    padding: 10px 20px;
+    font-size: 18px;
+    line-height: 1.33;
 
     .glyphicon {
         font-size: inherit;
@@ -326,9 +324,7 @@ label{
     position: relative;
 }
 
-.database-overlay{
-    z-index: 1049;
-}
+
 
 .dropdown-menu {
     > .active {
@@ -611,14 +607,12 @@ label{
 
 .navbar{
     margin-bottom: 0;
-}
 
-.navbar-default{
-    background-color: #FFFFFF;
-    border: 0;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-
-    &.affix {
+    .navbar-default{
+        background-color: #FFFFFF;
+        border: 0;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+        z-index: auto;
         top: 0;
         width: 100%;
         z-index: 1040;
@@ -626,90 +620,81 @@ label{
         // inside the nav and breaks the database-overlay .
         transform: none;
         -webkit-transform: none;
-    }
 
-    .navbar-nav {
-        > li {
-            > a{
-                margin-right: 40px;
-                color: #39b54a;
-                border-bottom: 2px solid #39b54a;
-                padding: 15px 0 13px;
+        .navbar-nav {
+            float: left;
+            margin: 0;
 
-                @media (max-width: 767px) {
-                    margin-right: 30px;
-                }
-
-                &.collapsed, &.collapsed:focus{
-                    background: none;
-                    color: #777777;
-                    border: 0;
-                    padding-bottom: 15px;
-                }
-
-                &:focus, &:hover, &.collapsed:hover{
-                    color: #39b54a;
-                }
-            }
-        }
-
-        > .dropdown {
-            > .primary{
-                border: 0;
-                background-color: #39b54a;
-                color: #FFFFFF;
-                padding: 15px 30px;
-                font-weight: bold;
-
-                &:hover, &:focus{
-                    background-color: #2f9f3e;
-                    color: #FFFFFF;
-                }
-            }
-        }
-    }
-}
-
-.navbar-nav {
-    float: left;
-    margin: 0;
-
-    > li {
-        float: left;
-    }
-
-    .open {
-        .dropdown-menu {
-            @media (max-width: 767px) {
-                position: absolute;
+            > li {
                 float: left;
-                width: auto;
-                margin: 2px 0 0;
-                background-color: #fff;
-                border: 1px solid #ccc;
-                border: 1px solid rgba(0,0,0,.15);
-                -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-                box-shadow: 0 6px 12px rgba(0,0,0,.175);
+
+                > a{
+                    margin-right: 40px;
+                    color: #39b54a;
+                    border-bottom: 2px solid #39b54a;
+                    padding: 15px 0 13px;
+
+                    @media (max-width: 767px) {
+                        margin-right: 30px;
+                    }
+
+                    &.collapsed, &.collapsed:focus{
+                        background: none;
+                        color: #777777;
+                        border: 0;
+                        padding-bottom: 15px;
+                    }
+
+                    &:focus, &:hover, &.collapsed:hover{
+                        color: #39b54a;
+                    }
+                }
+            }
+
+            > .dropdown {
+                > .primary{
+                    border: 0;
+                    background-color: #39b54a;
+                    color: #FFFFFF;
+                    padding: 15px 30px;
+                    font-weight: bold;
+
+                    &:hover, &:focus{
+                        background-color: #2f9f3e;
+                        color: #FFFFFF;
+                    }
+                }
+            }
+
+            .open {
+                .dropdown-menu {
+                    @media (max-width: 767px) {
+                        position: absolute;
+                        float: left;
+                        width: auto;
+                        margin: 2px 0 0;
+                        background-color: #fff;
+                        border: 1px solid #ccc;
+                        border: 1px solid rgba(0,0,0,.15);
+                        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+                        box-shadow: 0 6px 12px rgba(0,0,0,.175);
+                    }
+                }
             }
         }
     }
-}
 
-// Fixes for modal in header
-.navbar-static-top{
-    z-index: auto;
-}
+    .navbar-text{
+        margin: 8px;
+        font-weight: 300;
 
-.navbar-text{
-    margin: 8px;
-    font-weight: 300;
+        @media (max-width: 767px) {
+            display: none;
+        }
 
-    @media (max-width: 767px) {
-        display: none;
-    }
-
-    img{
-        margin-left: 6px;
+        img{
+            margin-left: 6px;
+        }
     }
 }
 
@@ -739,33 +724,15 @@ label{
     right: 0;
     top: 0;
     z-index: 9999;
+
+    &.database-overlay{
+        z-index: 1049;
+    }
 }
 
 .overlay-above{
     position: relative;
     z-index: 1050;
-}
-
-.overlay-container {
-    .loader {
-        text-shadow: 0 1px 0 rgba(240,240,240,0.9);
-        background-color: rgba(240, 240, 240, 0.6);
-
-        position: fixed;
-        left: 49%;
-        top: 40%;
-        display: inline-block;
-        line-height: 0;
-
-        z-index: 9999999;
-
-        border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-        border-right: 1.1em solid rgba(40, 255, 25, 0.9);
-        border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-        border-left: 1.1em solid #ffffff;
-        -webkit-animation: load8 1.1s infinite linear;
-        animation: load8 1.1s infinite linear;
-    }
 }
 
 .panel-group {
