--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -14,11 +14,9 @@
  *
  */
 
-.well-map{
-    padding: 0;
-}
-.well-map .chart-options .popover {
-    top: 45px;
+.chart-options .popover.map-options {
+    top: 25px;
+    right: -15px;
     position: absolute;
     z-index: 1000;
 }
@@ -40,15 +38,17 @@
     padding: 3px;
 }
 
-.heat-map .map-field-form {
-    padding: 20px 20px 10px 50px;
+.heat-map .header-container {
     position: absolute;
-    width: 100%;
+    top: 20px;
+    left: 20px;
+    right: 20px;
     z-index: 1000;
 }
 
-.heat-map .map-field-form .filter-reset{
-    margin-right: 10px;
+.heat-map .header-container.second-header {
+    top: 50px;
+    left: 60px;
 }
 
 .heat-map .alert {
@@ -74,7 +74,7 @@
 }
 
 .heat-map .olControlZoom {
-    top: 20px;
+    top: 50px;
     left: 20px;
 }
 
