--- a/app/css/style.css
+++ b/app/css/style.css
@@ -299,25 +299,29 @@ fieldset[disabled] .btn-primary.active {
     font-weight: bold;
     color: #777777;
     color: rgba(0,0,0,0.5);
-    background-color: #e9e9e9;
+    background-color: #DDDDDD;
     padding-left: 11px;
     border-radius: 4px;
     font-size: 12px;
+    margin-bottom: 5px;
 }
+
 .filter-reset .btn {
     border: 0;
     padding: 8px;
     color: #C2360D;
-    border-left: 1px solid #d9d9d9;
+    border-left: 1px solid #CCCCCC;
     border-radius: 0 4px 4px 0;
     margin-left: 7px;
     line-height: 1;
 }
+
 .filter-reset .btn:hover {
     background-color: #C2360D;
     border-color: #AA1E13;
     color: #FFFFFF;
 }
+
 .filter-reset .btn .glyphicon {
     font-size: 12px;
 }
@@ -325,8 +329,9 @@ fieldset[disabled] .btn-primary.active {
 /* Chart dropdown menu */
 
 .chart-options > a{
-    padding: 2px 0px;
     color: #39b54a;
+    border: 0;
+    padding: 0;
 }
 .chart-options > a.collapsed{
     color: #999999;
@@ -343,7 +348,6 @@ fieldset[disabled] .btn-primary.active {
     right: 5px;
     top: 45px;
     margin-top: 0;
-
     background: none;
     padding: 10px;
     border: 0;
@@ -371,11 +375,33 @@ fieldset[disabled] .btn-primary.active {
     display: block;
 }
 
-.chart-options span.chart-options-text {
+.chart-options span.header-text {
     /* Set the top position so the text aligns vertically with the gear icon. */
     position: relative;
     top: -1px;
     margin-right: 5px;
+}
+
+.header-container {
+    min-height: 25px;
+    margin-bottom: 5px;
+}
+
+.header-container.header-container-large {
+    min-height: 45px;
+}
+
+.header-container h4 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+.header-container span.header-text {
+    color: #999999;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1.33;
+    text-transform: uppercase;
 }
 
 /* Chart legend */
@@ -692,12 +718,12 @@ a.navbar-text:focus{
 
 .count{
     font-weight: bold;
-    font-size: 120%;
+    font-size: 22px;
     display: inline-block;
 }
 .count-large{
-    font-size: 160%;
-    bottom: -4px;
+    font-size: 32px;
+    bottom: -5px;
     display: inline-block;
     margin-right: 5px;
     position: relative;
