--- a/app/partials/directives/sunburst.html
+++ b/app/partials/directives/sunburst.html
@@ -1,6 +1,8 @@
-<div class="sunburst-header clearfix">
+<div class="header-container">
+    <span class="header-text pull-left">{{selectedTable.name}}</span>
+
     <div class="chart-options pull-right">
-        <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" 
+        <a class="btn btn-lg collapsed" data-toggle="collapse" 
             data-target=".{{uniqueChartOptions}} .sunburst-options" data-animation=false>
           <span class="glyphicon glyphicon-cog"></span>
           <span class="caret"></span>
@@ -30,8 +32,12 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div class="sunburst-ring-controls" ng-show="groupFields.length > 0">
+<div class="clearfix"></div>
+
+<div class="header-container">
+    <div class="sunburst-controls" ng-show="groupFields.length > 0">
         <div class="sunburst-transient-breadcrumb" ng-repeat="groupField in groupFields">
             <a class="breadcrumb-title" ng-click="dropGroup(groupField)">
               <span ng-bind="groupField"></span></span>
@@ -46,7 +52,7 @@
         </div>
     </div>
 
-    <div class="sunburst-aggregate-controls" ng-show = "valueField">
+    <div class="sunburst-controls" ng-show = "valueField">
         <form>
             <label><input type="radio" ng-model="arcValue" value="count" class="sunburst-chart-selector"> 
                 Count
@@ -59,5 +65,8 @@
     </div>
 </div>
 
+<div class="clearfix"></div>
+
 <div class="sunburst-tooltip"></div>
+
 <div class="sunburst-chart"></div>
