NEON-1476 The Filter Builder can now be added as a visualization in addition to being a navbar item.  Moved all the styling for the Filter Builder from the master style CSS file to its own CSS file.  Added a temporary icon for the visualization.  Included the Filter Builder in the sample config file.

--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -110,7 +110,7 @@
     padding: 0;
 }
 
-span.glyphicon:focus,
-span.glyphicon:hover {
+.countByDirective span.glyphicon:focus,
+.countByDirective span.glyphicon:hover {
     color: #39b54a;
 }
