NEON-1463 Added options menu directive to all visualizations.  Removed utility service because its functionality is now contained within the options menu.  Corrected styling for invalid number inputs.

--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -14,7 +14,7 @@
  *
  */
 
-.chart-options .popover.map-options {
+.heat-map .chart-options .popover {
     top: 25px;
     right: -15px;
     position: absolute;
