--- a/app/css/directives/timelineSelector.css
+++ b/app/css/directives/timelineSelector.css
@@ -68,7 +68,7 @@
     border-color: #AA1E13;
 }
 
-.timeline-selector .timeline-options.popover {
+.timeline-selector .chart-options .popover {
     /* Set the width so that the date granularity buttons fit on one row. */
     min-width: 306px;
 }
