--- a/app/partials/directives/circularHeatForm.html
+++ b/app/partials/directives/circularHeatForm.html
@@ -1,28 +1,18 @@
 <div class="header-container">
-    <span class="header-text pull-left">{{selectedTable.name}}</span>
+    <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
-    <div class="chart-options pull-right">
-        <a class="btn btn-lg collapsed" data-toggle="collapse" data-target=".{{uniqueChartOptions}} .circular-heat-options" data-animation=false>
-          <span class="glyphicon glyphicon-cog"></span>
-          <span class="caret"></span>
-        </a>
-
-        <div class="circular-heat-options popover bottom">
-            <div class="arrow"></div>
-            <div class="popover-content">
-                <div class="form-group">
-                    <label>Table</label>
-                    <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForChartData()">
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Date Field</label>
-                    <select class="form-control" ng-model="dateField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForChartData()">
-                    </select>
-                </div>
-            </div>
+    <options-menu parent-element="element">
+        <div class="form-group">
+            <label>Table</label>
+            <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForChartData()">
+            </select>
         </div>
-    </div>
+        <div class="form-group">
+            <label>Date Field</label>
+            <select class="form-control" ng-model="options.dateField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForChartData()">
+            </select>
+        </div>
+    </options-menu>
 </div>
 
 <div class="header-container">
