--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -1,55 +1,44 @@
 <div class="header-container">
-    <span class="header-text pull-left">{{selectedTable.name}}</span>
+    <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
-    <div class="chart-options pull-right">
-        <a class="btn btn-lg collapsed" data-toggle="collapse" data-target=".{{uniqueChartOptions}} .directed-graph-options" data-animation=false>
-            <span class="header-text" ng-hide="(numberOfNodesInGraph < nodeLimit)">{{nodeLimit}} node limit</span>
-            <span class="header-text" ng-hide="(numberOfNodesInGraph > 0)">No graph data available</span>
-            <span class="glyphicon glyphicon-cog"></span>
-            <span class="caret"></span>
-        </a>
-        <div class="directed-graph-options popover bottom">
-            <div class="arrow"></div>
-            <div class="popover-content">
-                <div class="form-group">
-                    <label>Table</label>
-                    <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForData()">
-                    </select>
-                </div>
+    <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
+        <div class="form-group">
+            <label>Table</label>
+            <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForData()">
+            </select>
+        </div>
 
-                <div class="form-group">
-                    <label>Node Field</label>
-                    <select class="form-control" ng-model="selectedNodeField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
-                    </select>
-                </div>
+        <div class="form-group">
+            <label>Node Field</label>
+            <select class="form-control" ng-model="options.selectedNodeField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
+            </select>
+        </div>
 
-                <div class="form-group">
-                    <label>Link(s) Field</label>
-                    <select class="form-control" ng-model="selectedLinkField" ng-options="field for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
-                        <option value=""></option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Filter on {{selectedNodeField}}</label>
-                    <select class="form-control" ng-model="selectedNode" ng-options="node for node in nodes track by node" ng-required="false" ng-disabled="(nodes.length == 0) || !(selectedNodeField)">
-                        <option value=""></option>
-                    </select>
-                </div>
+        <div class="form-group">
+            <label>Link(s) Field</label>
+            <select class="form-control" ng-model="options.selectedLinkField" ng-options="field for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Filter on {{options.selectedNodeField}}</label>
+            <select class="form-control" ng-model="options.selectedNode" ng-options="node for node in nodes track by node" ng-required="false" ng-disabled="(nodes.length == 0) || !(options.selectedNodeField)">
+                <option value=""></option>
+            </select>
+        </div>
 
-                <div class="form-group">
-                    <label>Graph Node Limit</label>
-                    <div class="input-group">
-                        <input type="number" min="1" class="form-control" ng-model="nodeLimit"></input>
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-default refresh" ng-click="queryForData()">
-                                <span class="glyphicon glyphicon-refresh"></span>
-                            </button>
-                        </div>
-                    </div>
+        <div class="form-group">
+            <label>Graph Node Limit</label>
+            <div class="input-group">
+                <input type="number" min="1" class="form-control" ng-model="options.nodeLimit" required>
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" ng-click="queryForData()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
                 </div>
             </div>
         </div>
-    </div>
+    </options-menu>
 </div>
 
 <div class="clearfix"></div>
