--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -1,64 +1,54 @@
 <div ng-hide="(navbarItem)" class="header-container">
-    <span class="header-text pull-left">{{selectedTable.name}}</span>
+    <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
-    <div class="chart-options pull-right">
-        <a class="btn btn-lg collapsed" data-toggle="collapse" data-target=".{{uniqueChartOptions}} .query-results-options" data-animation=false>
-          <span class="glyphicon glyphicon-cog"></span>
-          <span class="caret"></span>
-        </a>
-        <div class="query-results-options popover bottom">
-            <div class="arrow"></div>
-            <div class="popover-content">
-                <div class="form-group">
-                    <label>Table</label>
-                    <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndRowsAndCount()">
-                    </select>
+    <options-menu parent-element="element">
+        <div class="form-group">
+            <label>Table</label>
+            <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndRowsAndCount()">
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label>Add Column</label>
+            <div class="input-group">
+                <select class="form-control" ng-model="options.addField" ng-disabled="!(tableNameToDeletedFieldsMap[options.selectedTable.name].length > 0)" ng-options="field for field in tableNameToDeletedFieldsMap[options.selectedTable.name]">
+                </select>
+
+                <div class="input-group-btn">
+                    <button class="btn btn-default" ng-click="addColumn()" ng-disabled="!(tableNameToDeletedFieldsMap[options.selectedTable.name].length > 0)">&plus;</button>
                 </div>
+            </div>
+        </div>    
 
-                <div class="form-group">
-                    <label>Add Column</label>
-                    <div class="input-group">
-                        <select class="form-control" ng-model="addField" ng-disabled="!(tableNameToDeletedFieldsMap[selectedTable.name].length > 0)" ng-options="field for field in tableNameToDeletedFieldsMap[selectedTable.name]">
-                        </select>
+        <div class="form-group">
+            <label>Sort By</label>
+            <div class="input-group">
+                <select class="form-control" ng-model="options.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="refreshData()">
+                </select>
 
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" ng-click="addColumn()" ng-disabled="!(tableNameToDeletedFieldsMap[selectedTable.name].length > 0)">&plus;</button>
-                        </div>
-                    </div>
-                </div>    
-
-                <div class="form-group">
-                    <label>Sort By</label>
-                    <div class="input-group">
-                        <select class="form-control" ng-model="sortByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="refreshData()">
-                        </select>
-
-                        <div class="input-group-btn">
-                            <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[sortDirection === ASCENDING]">
-                                <input type="radio" ng-model="sortDirection" style="display:none" ng-value="ASCENDING" ng-click="handleAscButtonClick()"> ASC
-                            </label>
-                            <label class="btn btn-default" ng-class="{true: 'active', false: ''}[sortDirection === DESCENDING]">
-                                <input type="radio" ng-model="sortDirection" style="display:none" ng-value="DESCENDING" ng-click="handleDescButtonClick()"> DESC
-                            </label>
-                        </div>
-                    </div>
-                </div>    
-
-                <div class="form-group">
-                    <label>Limit</label>
-                    <div class="input-group">
-                        <input type="number" min="1" name="limitInput" class="form-control" ng-model="limit" ng-class="{true: '', false: 'has-error'}[dataTableForm.limitInput.$error.number]">
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-default refresh" ng-click="refreshData()">
-                                <span class="glyphicon glyphicon-refresh"></span>
-                            </button>
-                        </div>
-                    </div>
+                <div class="input-group-btn">
+                    <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.sortDirection === ASCENDING]">
+                        <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="ASCENDING" ng-click="handleAscButtonClick()"> ASC
+                    </label>
+                    <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.sortDirection === DESCENDING]">
+                        <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="DESCENDING" ng-click="handleDescButtonClick()"> DESC
+                    </label>
                 </div>
+            </div>
+        </div>    
 
+        <div class="form-group">
+            <label>Limit</label>
+            <div class="input-group">
+                <input type="number" min="1" class="form-control" ng-model="options.limit" required>
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" ng-click="refreshData()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
+    </options-menu>
 </div>
 
 <div class="clearfix"></div>
@@ -71,21 +61,20 @@
 
     <div class="form-inline navbar-item-forms pull-right">
         <form name="dataTableForm">
-
             <div ng-hide="!(navbarItem)" class="form-group">
                 <label>Table</label>
-                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndRowsAndCount()">
+                <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndRowsAndCount()">
                 </select>
             </div>
 
             <div ng-hide="!(navbarItem)" class="form-input-group">
                 <label>Add Column</label>
                 <div class="input-group">
-                    <select class="form-control" ng-model="addField" ng-disabled="!(tableNameToDeletedFieldsMap[selectedTable.name].length > 0)" ng-options="field for field in tableNameToDeletedFieldsMap[selectedTable.name]">
+                    <select class="form-control" ng-model="options.addField" ng-disabled="!(tableNameToDeletedFieldsMap[options.selectedTable.name].length > 0)" ng-options="field for field in tableNameToDeletedFieldsMap[options.selectedTable.name]">
                     </select>
 
                     <div class="input-group-btn">
-                        <button class="btn btn-default" ng-click="addColumn()" ng-disabled="!(tableNameToDeletedFieldsMap[selectedTable.name].length > 0)">&plus;</button>
+                        <button class="btn btn-default" ng-click="addColumn()" ng-disabled="!(tableNameToDeletedFieldsMap[options.selectedTable.name].length > 0)">&plus;</button>
                     </div>
                 </div>
             </div>    
@@ -94,15 +83,15 @@
                 <label>Sort By</label>
 
                 <div class="input-group">
-                    <select class="form-control" ng-model="sortByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="refreshData()">
+                    <select class="form-control" ng-model="options.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="refreshData()">
                     </select>
 
                     <div class="input-group-btn">
-                        <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[sortDirection === ASCENDING]">
-                            <input type="radio" ng-model="sortDirection" style="display:none" ng-value="ASCENDING" ng-click="handleAscButtonClick()"> ASC
+                        <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[options.sortDirection === ASCENDING]">
+                            <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="ASCENDING" ng-click="handleAscButtonClick()"> ASC
                         </label>
-                        <label class="btn btn-default" ng-class="{true: 'active', false: ''}[sortDirection === DESCENDING]">
-                            <input type="radio" ng-model="sortDirection" style="display:none" ng-value="DESCENDING" ng-click="handleDescButtonClick()"> DESC
+                        <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.sortDirection === DESCENDING]">
+                            <input type="radio" ng-model="options.sortDirection" style="display:none" ng-value="DESCENDING" ng-click="handleDescButtonClick()"> DESC
                         </label>
                     </div>
                 </div>
@@ -110,7 +99,7 @@
 
             <div ng-hide="!(navbarItem)" class="form-group">
                 <label>Limit</label>
-                <input type="number" min="1" name="limitInput" class="form-control" ng-model="limit"
+                <input type="number" min="1" name="limitInput" class="form-control" ng-model="options.limit"
                 ng-class="{true: '', false: 'has-error'}[dataTableForm.limitInput.$error.number]">
             </div>
 
