--- a/app/partials/directives/sunburst.html
+++ b/app/partials/directives/sunburst.html
@@ -1,37 +1,27 @@
 <div class="header-container">
-    <span class="header-text pull-left">{{selectedTable.name}}</span>
+    <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
-    <div class="chart-options pull-right">
-        <a class="btn btn-lg collapsed" data-toggle="collapse" 
-            data-target=".{{uniqueChartOptions}} .sunburst-options" data-animation=false>
-          <span class="glyphicon glyphicon-cog"></span>
-          <span class="caret"></span>
-        </a>
-        <div class="sunburst-options popover bottom">
-            <div class="arrow"></div>
-            <div class="popover-content">
-                <div class="form-group">
-                    <label>Table</label>
-                    <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForData()">
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Add a Ring</label>
-                    <select class="form-control" ng-model="selectedItem" ng-disabled="!(fields.length > 0)" 
-                        ng-options="field for field in fields" ng-change="addGroup()">
-                    <option value="">Add a Ring</option>
-                </select>
-                </div>
-                <div class="form-group"  ng-hide="arcValue === 'Record Count'">
-                    <label>Value Field</label>
-                    <select class="form-control" ng-model="valueField"
-                        ng-options="field for field in fields">
-                        <option value="">Select a Field</option>
-                    </select>
-                </div>
-            </div>
+    <options-menu parent-element="element">
+        <div class="form-group">
+            <label>Table</label>
+            <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForData()">
+            </select>
         </div>
-    </div>
+        <div class="form-group">
+            <label>Add a Ring</label>
+            <select class="form-control" ng-model="options.selectedItem" ng-disabled="!(fields.length > 0)" 
+                ng-options="field for field in fields" ng-change="addGroup()">
+            <option value="">Add a Ring</option>
+        </select>
+        </div>
+        <div class="form-group"  ng-hide="arcValue === 'Record Count'">
+            <label>Value Field</label>
+            <select class="form-control" ng-model="options.valueField"
+                ng-options="field for field in fields">
+                <option value="">Select a Field</option>
+            </select>
+        </div>
+    </options-menu>
 </div>
 
 <div class="clearfix"></div>
@@ -48,18 +38,18 @@
             <span class="glyphicon glyphicon-chevron-right"></span>
         </div>
         <div class="sunburst-breadcrumb">
-            <span ng-bind="(arcValue === 'count') ? arcValue : 'TOTAL (' + valueField + ')'"></span>
+            <span ng-bind="(arcValue === 'count') ? arcValue : 'TOTAL (' + options.valueField + ')'"></span>
         </div>
     </div>
 
-    <div class="sunburst-controls" ng-show = "valueField">
+    <div class="sunburst-controls" ng-show = "options.valueField">
         <form>
             <label><input type="radio" ng-model="arcValue" value="count" class="sunburst-chart-selector"> 
                 Count
             </label>
             <label><input type="radio" ng-model="arcValue" value="total" class="sunburst-chart-selector"
-                ng-disabled="!(valueField)"> 
-                <span ng-bind="(valueField) ? 'TOTAL (' + valueField + ')' : 'TOTAL ()'"></span>
+                ng-disabled="!(options.valueField)"> 
+                <span ng-bind="(options.valueField) ? 'TOTAL (' + options.valueField + ')' : 'TOTAL ()'"></span>
             </label>
         </form>
     </div>
