--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -43,7 +43,7 @@
 
 <div class="clearfix"></div>
 
-<div class="directed-graph {{uniqueId}}">
+<div class="directed-graph">
     <div class="config-row-div">
         <div class="filter-reset pull-right" ng-repeat="value in filteredNodes">
             {{value}}
@@ -52,5 +52,5 @@
             </a>
         </div>
     </div>
-    <div id="directed-graph-div-{{uniqueId}}"></div>
+    <div class="directed-graph-container directed-graph-container-{{uniqueId}}"></div>
 </div>
